<resources>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_new_ticket">TicketActivity</string>
    <string name="title_activity_tickets">TicketActivity</string>
    <string name="title_activity_result_history">ResultHistoryActivity</string>



    <string name="app_name">LUCKY BOSS</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="welcome">Welcome</string>
    <string name="new_tickets">New Tickets</string>
    <string name="ticket_history">Tickets History</string>
    <string name="result_history">Result History</string>

    <string name="view">View</string>
    <string name="newticket">New</string>
    <string name="print">Print</string>
    <string name="time">Time</string>
    <string name="twelve">12</string>
    <string name="three">3</string>
    <string name="seven">7</string>
    <string name="ticket">Ticket</string>
    <string name="board">Board</string>
    <string name="pair">Pair</string>
    <string name="threeD">3D</string>
    <string name="fourD">4D</string>

    <string name="rate">Rate</string>
    <string name="ticket_number">Number</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="create">Create</string>

    <string name="search">Search</string>

    <string name="date">Date</string>
    <string name="prize">Prize</string>
    <string name="balance">Balance</string>
    <string name="excess">Excess</string>

    <string-array name="timeslot">
        <item>12</item>
        <item>3</item>
        <item>7</item>
    </string-array>
    <string name="abc">ABC</string>
    <string name="box">Box</string>
    <string name="abbcca">AB BC AC</string>
    <string name="threed30">3D 30</string>
    <string name="threed70">3D 70</string>
    <string name="threed120">3D 120</string>
    <string name="fourd20">4D 20</string>
    <string name="fourd100">4D 100</string>

</resources>
