<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/colorPrimary"
        tools:ignore="UselessParent">
        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:padding="50dp"
                card_view:cardCornerRadius="2dp">

                <LinearLayout
                    android:id="@+id/otp_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:orientation="vertical"
                    android:focusable="true">

                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"/>

                    <EditText
                        android:id="@+id/input_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        tools:ignore="Autofill,LabelFor" />

                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"/>

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:inputType="textPassword"
                        tools:ignore="Autofill,LabelFor" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="15sp"
                        android:background="@color/colorAccent"
                        android:textColor="@color/colorWhite"
                        android:text="@string/login"
                        />


                </LinearLayout>

<!--                <LinearLayout-->
<!--                    android:visibility="gone"-->
<!--                    android:id="@+id/verify_form"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="30dp"-->
<!--                    android:orientation="vertical"-->
<!--                    android:focusable="true" android:focusableInTouchMode="true">-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/otp"/>-->

<!--                    <EditText-->
<!--                        android:id="@+id/input_otp"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:ems="10"-->
<!--                        android:inputType="number"-->
<!--                        tools:ignore="Autofill,LabelFor"/>-->

<!--                    <Button-->
<!--                        android:id="@+id/verify_otp"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginTop="20dp"-->
<!--                        android:textSize="15sp"-->
<!--                        android:background="@color/colorAccent"-->
<!--                        android:textColor="@color/colorWhite"-->
<!--                        android:text="@string/verify"-->
<!--                        android:onClick="verify_otp"/>-->

<!--                </LinearLayout>-->

            </android.support.v7.widget.CardView>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>

